# secure-monitoring-system

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  README_SERVER_DEPLOY_AND_LOCAL.md  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  makefile  test_rabbitmq_pub.py
.github/workflows/: security_ci.yml
ai-module/: Dockerfile  detector.py  main.py  pyproject.toml  queue_manager.py  worker.py
backend/: .dockerignore  Dockerfile  ai.py  app.py  main.py  pyproject.toml  start.py  video_stream.py
backend/ai/: detector.py  risk_engine.py
backend/application/dto/: zone_dto.py
backend/application/services/: ai_client.py  auth_service.py  event_service.py  risk_service.py  zone_service.py
backend/core/: config.py  db_waiter.py  startup.py  websocket.py
backend/domain/entities/: event.py  zone.py
backend/domain/enums/: role_enum.py
backend/domain/repositories/: event_repo.py
backend/infrastructure/: database.py
backend/infrastructure/models/: event_model.py  zone_model.py
backend/infrastructure/repositories/: event_repo_impl.py  user_repo_impl.py  zone_repo_impl.py
backend/presentation/api/: ai_controller.py  auth_controller.py  event_controller.py  stream_controller.py  zone_controller.py
backend/streaming/: ai_worker.py  frame_queue.py  yolo_worker.py
backend/video_service/: app.py  detector.py  main.py  models.py  pipeline.py  video_source.py  zone_drawer.py  zone_engine.py  zone_models.py  zones.json
backend/zones/: zones.json
cloud/ai_model_service/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml  test_debug.py
cloud/ai_model_service/api/: routes.py
cloud/ai_model_service/config/: settings.py
cloud/ai_model_service/models/: detector.py
cloud/ai_model_service/schemas/: events.py
cloud/ai_model_service/services/: debug_visualizer.py  frame_storage.py  pipeline.py  rabbitmq_service.py  risk_engine.py  smart_zone_analytics.py  tracker.py  visual_renderer.py  zone_manager.py
cloud/ai_model_service/test/: test_detector.py  test_frame_saving.py  test_pipeline.py  test_rabbitmq_service.py  test_risk_schedule.py  test_tracker.py  test_zone_manager.py
cloud/ai_model_service/yolov8m_openvino_model/: metadata.yaml  yolov8m.xml
cloud/backend_service/backend/: .env  Dockerfile  README.md  main.py  pyproject.toml  start.py
cloud/backend_service/backend/ai/: model.py  zone_checker.py
cloud/backend_service/backend/application/dto/: ai_event_dto.py  zone_dto.py
cloud/backend_service/backend/application/services/: auth_service.py  event_service.py  smart_video_analytics.py  zone_service.py
cloud/backend_service/backend/core/: config.py  jwt_auth.py  security.py  server_info.py  startup.py  websocket.py
cloud/backend_service/backend/domain/entities/: event.py  user.py
cloud/backend_service/backend/domain/enums/: risk_enum.py
cloud/backend_service/backend/domain/repositories/: event_repo.py  user_repo.py  zone_repo.py
cloud/backend_service/backend/infrastructure/: database.py  db_compat.py
cloud/backend_service/backend/infrastructure/messaging/: event_consumer.py  rabbitmq_client.py
cloud/backend_service/backend/infrastructure/models/: event_model.py  user_model.py  zone_model.py
cloud/backend_service/backend/infrastructure/repositories/: event_repo_impl.py  user_repo_impl.py  zone_repo_impl.py
cloud/backend_service/backend/presentation/api/: ai_controller.py  auth_controller.py  event_controller.py  server_controller.py  stream_controller.py  zone_controller.py
cloud/backend_service/backend/tests/: test_event_consumer.py  test_event_service.py  test_smart_video_analytics.py  test_zone_dto.py
docs/: api-reference.md  architecture-overview.md  architecture.md
frontend/: index.html  main.js  package-lock.json  package.json  preload.js  script.js  styles.css
frontend/electron/: main.js  preload.js  rtspStreamer.js
frontend/renderer/: package-lock.json  package.json
frontend/renderer/src/: App.jsx  main.jsx
frontend/src/: App.jsx
frontend/src/services/: zonesApi.js
local/frame_extractor_service/: .dockerignore  .env  .gitignore  .pylintrc  Dockerfile  GEMINI.md  ai_client.py  camera_manager.py  camera_worker.py  cameras.db  cameras.json  config.py  extractor.py  main.py  motion_detector.py  pyproject.toml  schemas.py
local/frame_extractor_service/api/: __init__.py  cameras.py  deps.py  routes.py  scanner.py  system.py
local/frame_extractor_service/core/: __init__.py  ai_client.py  camera_config_repository.py  camera_manager.py  camera_stats.py  camera_worker.py  camera_worker_factory.py  database.py  sqlite_camera_repository.py
local/frame_extractor_service/core/implementations/: __init__.py  ai_client_sink.py  rtsp_frame_source.py
local/frame_extractor_service/core/interfaces/: __init__.py  i_ai_client.py  i_camera_repository.py  i_camera_worker_factory.py  i_frame_processor.py  i_frame_sink.py  i_frame_source.py
local/frame_extractor_service/detection/: __init__.py  motion_detector.py  motion_detector_config.py  motion_detector_processor.py  motion_state.py
local/frame_extractor_service/schemas/: __init__.py  camera_add_request.py  camera_config.py  camera_params.py  camera_status.py  camera_status_response.py  camera_update_request.py  compat.py  discovered_camera.py  global_config_update.py  motion_config.py  scan_request.py  scan_result.py  service_status_response.py
local/frame_extractor_service/scripts/: run_tests.py
local/frame_extractor_service/service/: _scanner_utils.py  scanner.py
local/frame_extractor_service/service/api/: routes.py
local/frame_extractor_service/test/: test_ai_client.py  test_camera_manager.py  test_camera_worker.py  test_motion_detector.py  test_schemas.py
local/frame_extractor_service/tests/: conftest.py
local/frame_extractor_service/tests/unit/: test_ai_client.py  test_api_routes.py  test_camera_manager.py  test_camera_repository.py  test_frame_processor.py  test_motion_detector.py  test_scanner.py  test_schema_refactor.py  test_sqlite_repository.py
scripts/: smoke_integration.py
(+58 files in other folders)
