[project]
name = "security-system-backend"
version = "0.1.0"
description = "Cloud Intelligent Security Monitoring System Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "redis>=5.0.4",
    "pydantic-settings>=2.2.1",
    "websockets>=12.0",
    "orjson>=3.10.0",
    "loguru>=0.7.2",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "requests>=2.32.5"
]

# =====================================================
# NEW UV FORMAT (ЗАМІСТЬ tool.uv.dev-dependencies)
# =====================================================

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0"
]

# =====================================================
# MYPY
# =====================================================

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true

# =====================================================
# RUFF
# =====================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

# =====================================================
# BLACK
# =====================================================

[tool.black]
line-length = 100
target-version = ["py311"]
