[project]
name = "ai-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.22",
    "ultralytics>=8.4.21",
    "uvicorn>=0.41.0",
]
