[project]
name = "ai-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "openvino>=2024.0.0",
    "ultralytics>=8.4.21",
    "uvicorn>=0.41.0",
]
