[project]
name = "security-system-backend"
version = "0.1.0"
description = "Cloud Intelligent Security Monitoring System Backend"
requires-python = ">=3.11"

dependencies = [
    # Core
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.11",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    # Cache / Realtime
    "redis>=5.0.4",
    "websockets>=12.0",
    # Utils
    "orjson>=3.10.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.22",
    # AI
    "ultralytics",
    "opencv-python-headless>=4.8.0",
    "numpy",
    # Messaging
    "aio-pika>=9.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0"
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]
