[project]
name = "security-system-backend"
version = "0.1.0"
description = "Cloud Intelligent Security Monitoring System Backend"
requires-python = ">=3.11"

dependencies = [
    # Core
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    # Database
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.11",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    # Networking / Messaging
    "requests>=2.32.0",
    # Messaging
    "aio-pika>=9.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0"
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]
